@@ -1,3 +1,8 @@
+2002-01-28  Paolo Carlini  <pcarlini@unitus.it>
+
+	* testsuite/27_io/ostream_inserter_arith.cc (test03):
+	Fix to deal correctly with both 32 bit and 64 bit architectures
+
 2002-01-25  Loren Rittle <ljrittle@acm.org>
 
 	* testsuite/thread/pthread1.cc: Use one condition variable
